modified:   Makefile modified:   docs/docs.go modified:   docs/swagger.json modified:   docs/swagger.yaml modified:   internal/adapter/inbound/http/handler.go modified:   internal/adapter/outbound/persistence/mysql.go modified:   internal/adapter/outbound/persistence/psql.go modified:   internal/application/service.go modified:   internal/domain/format.go modified:   internal/port/inbound/connect.go modified:   internal/port/outbound/database.go modified:   test/http_test.go modified:   test/integration_test.go modified:   test/service_test.go
